# Marco

./: CMakeLists.txt  README.md  connection.cpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  server.cpp  server.hpp  untitled.cbp
systemd/: marco.service
